# WiseWaste

./: .gitattributes  .gitignore  .gitmodules  README.md
backend/: CMakeLists.txt  main.cpp
backend/controller/: waste_pickup_controller.cpp  waste_pickup_controller.h
backend/model/: database.cpp  database.h  waste_pickup.cpp  waste_pickup.h
backend/view/: waste_pickup_view.cpp  waste_pickup_view.h
frontend/: app.py  requirements.txt
frontend/pages/: home.py  request_pickup.py  track_pickup.py  view_pickups.py
frontend/utils/: api.py  formatting.py
